Stop uppercasing headlines for readability.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -158,7 +158,6 @@ html, body {
 	font-weight: 700;
 	line-height: 30px;
   letter-spacing: -0.04rem;
-	text-transform: uppercase;
 	padding-bottom: 5px;
 }
 
@@ -169,7 +168,6 @@ html, body {
 	font-weight: 700;
 	line-height: 30px;
   letter-spacing: -0.04rem;
-	text-transform: uppercase;
 	padding-bottom: 5px;
 }
 #stage h2 a {
@@ -213,7 +211,6 @@ html, body {
 	font-size: 18px;
 	line-height: 22px;
 	font-weight: 700;
-	text-transform: uppercase;
 	padding-top: 25px;
 	margin-bottom: 25px;
 }
